fix the space isuue on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -573,12 +573,14 @@ section,
 @media (max-width: 768px) {
   .hero .hero-title {
     font-size: 2.8rem;
+    min-height: 2.4em;
   }
 }
 
 @media (max-width: 576px) {
   .hero .hero-title {
     font-size: 2.2rem;
+    min-height: 2.4em;
   }
 }
 
